<resources>
    <string name="app_name">一步</string>
    <string name="title_activity_login">登录账号</string>
    <string name="title_activity_register">注册账号</string>
    <!-- Strings related to login or register -->
    <string name="prompt_ID">邮箱</string>
    <string name="prompt_password">密码 (6~16位)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">登  录</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="remember_pwd">记住密码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="acion_register">注  册</string>
    <string name="register_name">昵称（不超过10位）</string>
    <string name="get_identify_code">验证码</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>
